# leet-code-answers

./: 1-twoSum.py  13-romanToInteger.py  1337-theKWeakestRowsInAMatrix.py  1342-numberOfStepsToReduceANumberToZero.py  2-addTwoNumbers.py  206-reverseLinkedList.py  234-palindromeLinkedList.py  383-ransomNote.py  876-middleOfLinkedList.py  README.md  pyproject.toml
easy/: 1-twoSum.py  13-romanToInteger.py  1672-richestCustomerWealth.py  234-palindromeLinkedList.py  412-fizzBuzz.py
midium/: 2-addTwoNumbers.py  3-longestSubstringWithoutRepeatingCharacters.py
